robballen75-Salesforce/4-7-15/src/objects/ProductSolutionCodeMap__c.object
<CustomObject>
    <description>Maps ProductSolutions to one or more ProductCodes.</description>
    <fields>
        <fullName>ProductCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ProductCode tags associated with software products and downloads</description>
        <label>ProductCode</label>
        <referenceTo>ProductCode__c</referenceTo>
        <relationshipLabel>ProductSolutionCodeMaps</relationshipLabel>
        <relationshipName>ProductSolutionCodeMaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductSolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ProductSolution sold and document as a ContractProduct</description>
        <label>ProductSolution</label>
        <referenceTo>ProductSolution__c</referenceTo>
        <relationshipLabel>ProductSolutionCodeMaps</relationshipLabel>
        <relationshipName>ProductSolutionCodeMaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordID-18</label>
        <type>Text</type>
    </fields>
    <label>ProductSolutionCodeMap</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProductCode__c</columns>
        <columns>ProductSolution__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>RecordID_18__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ProductSolutionCodeMap_View</fullName>
        <columns>RecordID_18__c</columns>
        <columns>ProductSolution__c</columns>
        <columns>ProductCode__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ProductSolutionCodeMap View</label>
    </listViews>
    <nameField>
        <displayFormat>PSCM-{000}</displayFormat>
        <label>ProductSolutionCodeMap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductSolutionCodeMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>